--- a/style.css
+++ b/style.css
@@ -11,9 +11,73 @@ html, body {
 
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
-@media (min-width: 770px) {
-    img{
-        object-fit:cover;
+@media (max-width: 498px) {
+  
+
+/*----------------------------------------HEADER---------------------------------------------------------*/
+    header{
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        align-self: center;
+        justify-content: center;
+        padding: 10px 16px;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        margin-bottom: 100px;
+        border-bottom-color: rgba(58, 58, 58, 0.288);
+        border-bottom-style: solid;
+       
+
+    }
+    .logo{
+        height: 10vw;
+        
+    }
+    .place{
+        color: rgb(88, 88, 88);
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        width: 100%;
+        height: 50px;
+        padding-top: 70px;
+        background-color: rgba(190, 190, 190, 0.397) ;
+
+    }
+    .place i.fas{
+        margin-right: 2vw;
+    }
+    .first-container-wrapper{
+        background-color: rgba(233, 233, 233, 0.486);
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 30px;
+    }
+    h1{
+        padding-top: 10px;
+        font-size: 4.5vw;
+        display: flex;
+        align-self: center;
+        align-content: center;
+        justify-content: center;
+        width: 49vw;
+        margin: 0;
+        margin-top:10px;
+    }
+    h1 p{
+        margin: 0;
+        padding: 0;
+    }
+    .sub{
+        display: inline-block;
+        text-align: center;
+        color: rgb(99, 99, 99);
+        width: 80%;
+        
     }
 
 }
