--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,17 @@ html, body {
         border-bottom-color: rgba(58, 58, 58, 0.288);
         border-bottom-style: solid;
         padding-top: 20px;
+        
+        i.fas{
+            display: none;
+        }
+        
+        span{
+            display:block;
+            width: 20px;
+            margin-right: 65px;
+        }
+
        
 
     }
@@ -38,14 +49,7 @@ html, body {
         flex-direction: row;
 
     }
-    header i.fas{
-        display: none;
-    }
-    header span{
-        display:block;
-        width: 20px;
-        margin-right: 65px;
-    }
+   
     .logo{
         height: 10vw;
         margin-right: 90px;
@@ -60,11 +64,12 @@ html, body {
         height: 50px;
         padding-top: 10px;
         background-color: rgba(190, 190, 190, 0.397) ;
-
-    }
-    .place i.fas{
-        margin-right: 2vw;
-    }
+       
+        i.fas{
+            margin-right: 2vw;
+        }
+   }
+ 
     .first-container-wrapper{
         background-color: rgba(233, 233, 233, 0.486);
         display: flex;
@@ -84,10 +89,12 @@ html, body {
         width: 49vw;
         margin: 0;
         margin-top:10px;
-    }
-    h1 p{
+       
+        p{
         margin: 0;
         padding: 0;
+
+        }
     }
     .sub{
         display: inline-block;
@@ -152,11 +159,17 @@ html, body {
         justify-content: center;
         align-items:center;
         margin-left: 10vw;
+        i.fa{
+            color: rgb(155, 155, 155);
+            margin-right: 3vw;
+        }
+        i.fas{
+            color: rgb(155, 155, 155);
+            margin-right: 3vw;
+
+        }
     }
-    li i.fa,i.fas{
-        color: rgb(155, 155, 155);
-        margin-right: 3vw;
-    }
+
     .background{
         position: relative;
         list-style-type: none;
@@ -171,10 +184,11 @@ html, body {
         justify-content: center;
         align-items:center;
         margin-left: 10vw;
-    }
-    .background i.fa{
-        color: #9356DC;
 
+        i.fas{
+            color: #9356DC;
+    
+        }
     }
 /*------------------RESTAURANTS------------*/
 
@@ -187,11 +201,13 @@ html, body {
     }
     .thrid-container{
         background-color: rgba(233, 233, 233, 0.486);
+        a{
+            color: black;
+            text-decoration: none;
+
+        }
     }
-    .thrid-container a{
-        color: black;
-        text-decoration: none;
-    }
+
     .image{
         width: 100%;
         height: 200px;
@@ -205,19 +221,19 @@ html, body {
         background-color: white;
         width: 90%;
         height: 290px;
-    }
-    .card p{
-        font-weight: 800;
-        font-size: 4vw;
-        margin:0;
-        margin-left: 3vw;
-        margin-top: 10px;
-    }
-    .card .subtitles{
-        font-weight: 500;
-        color: rgb(107, 107, 107);
-        margin-top: 1vw;
-        font-size: 3.5vw;
+        p{
+            font-weight: 800;
+            font-size: 4vw;
+            margin:0;
+            margin-left: 3vw;
+            margin-top: 10px;
+        }
+        .subtitles{
+            font-weight: 500;
+            color: rgb(107, 107, 107);
+            margin-top: 1vw;
+            font-size: 3.5vw;
+        }
     }
 
 }
