--- a/style.css
+++ b/style.css
@@ -1,223 +1,231 @@
-*{
-    scroll-behavior: smooth;
-    transition: 0.3s;
-    font-family: 'Roboto', sans-serif;
-}
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-    margin: 0;
+* {
+  scroll-behavior: smooth;
+  transition: 0.3s;
+  font-family: "Roboto", sans-serif;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+}
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
-  
+  /*----------------------------------------HEADER---------------------------------------------------------*/
+  header {
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    padding: 10px 16px;
+    height: 40px;
+    width: 100%;
+    border-bottom-color: rgba(58, 58, 58, 0.288);
+    border-bottom-style: solid;
+    padding-top: 20px;
+  }
+  header i.fas {
+    display: none;
+  }
+  header span {
+    display: block;
+    width: 20px;
+    margin-right: 65px;
+  }
 
-/*----------------------------------------HEADER---------------------------------------------------------*/
-    header{
-        background-color: rgb(255, 255, 255);
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        flex-direction: row;
-        padding: 10px 16px;
-        height: 40px;
-        width: 100%;
-        border-bottom-color: rgba(58, 58, 58, 0.288);
-        border-bottom-style: solid;
-        padding-top: 20px;
-       
+  #head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+  }
 
-    }
-    #head{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
+  .logo {
+    height: 10vw;
+    margin-right: 90px;
+  }
 
-    }
-    header i.fas{
-        display: none;
-    }
-    header span{
-        display:block;
-        width: 20px;
-        margin-right: 65px;
-    }
-    .logo{
-        height: 10vw;
-        margin-right: 90px;
-    
-    }
-    .place{
-        color: rgb(88, 88, 88);
-        display: flex;
-        align-content: center;
-        justify-content: center;
-        width: 100%;
-        height: 50px;
-        padding-top: 10px;
-        background-color: rgba(190, 190, 190, 0.397) ;
+  .place {
+    color: #585858;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    background-color: rgba(190, 190, 190, 0.397);
+  }
+  .place i.fas {
+    margin-right: 2vw;
+  }
 
-    }
-    .place i.fas{
-        margin-right: 2vw;
-    }
-    .first-container-wrapper{
-        background-color: rgba(233, 233, 233, 0.486);
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-        justify-content: center;
-        text-align: center;
-        padding-bottom: 30px;
-    }
-    h1{
-        padding-top: 10px;
-        font-size: 4.5vw;
-        display: flex;
-        align-self: center;
-        align-content: center;
-        justify-content: center;
-        width: 49vw;
-        margin: 0;
-        margin-top:10px;
-    }
-    h1 p{
-        margin: 0;
-        padding: 0;
-    }
-    .sub{
-        display: inline-block;
-        text-align: center;
-        color: rgb(99, 99, 99);
-        width: 80%;
-        
-    }
-    .explorer
-    {
-        color: floralwhite;
-        font-weight: bold;
-        width: 50%;
-        height:11vw;
-        border-radius: 20px;
-        border:none;
-        align-self: center;
-        background: linear-gradient(#FF79DA , #9356DC);
-        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
-        
-    }
-    /*-------------------FONCTIONNEMENT-------------------*/
-    h2{
-        font-size: 5vw;
-        font-weight: 700;
-        margin-left: 3vw;
-    }
-    ul{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-    }
-    ol{
-        list-style: none;
-        counter-reset: item;
+  .first-container-wrapper {
+    background-color: rgba(233, 233, 233, 0.486);
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 30px;
+  }
 
-    }
-    li:before{
-        position: absolute;
-        color: rgb(255, 255, 255);
-        content: counter(item);
-        height: 20px;
-        width: 20px;
-        vertical-align: top;
-        text-align: center;
-        background: #9356DC;
-        border-radius: 20px;
-        margin-right: 63vw;
-    }
-    li{ 
-        position: relative;
-        list-style-type: none;
-        counter-increment: item;
-        background-color: rgba(233, 233, 233, 0.486);
-        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
-        border-radius: 20px;
-        width: 70%;
-        height: 60px;
-        margin: 15px;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        margin-left: 10vw;
-    }
-    li i.fa,i.fas{
-        color: rgb(155, 155, 155);
-        margin-right: 3vw;
-    }
-    .background{
-        position: relative;
-        list-style-type: none;
-        counter-increment: item;
-        background-color: #9256dc1a;
-        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
-        border-radius: 20px;
-        width: 70%;
-        height: 60px;
-        margin: 15px;
-        display: flex;
-        justify-content: center;
-        align-items:center;
-        margin-left: 10vw;
-    }
-    .background i.fa{
-        color: #9356DC;
+  h1 {
+    padding-top: 10px;
+    font-size: 4.5vw;
+    display: flex;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    width: 49vw;
+    margin: 0;
+    margin-top: 10px;
+  }
+  h1 p {
+    margin: 0;
+    padding: 0;
+  }
 
-    }
-/*------------------RESTAURANTS------------*/
+  .sub {
+    display: inline-block;
+    text-align: center;
+    color: #636363;
+    width: 80%;
+  }
 
-    h3{
-        font-size: 5vw;
-        font-weight: 700;
-        margin-left: 3vw;
-        padding-top: 30px;
+  .explorer {
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height: 11vw;
+    border-radius: 20px;
+    border: none;
+    align-self: center;
+    background: linear-gradient(#FF79DA, #9356DC);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+  }
 
-    }
-    .thrid-container{
-        background-color: rgba(233, 233, 233, 0.486);
-    }
-    .thrid-container a{
-        color: black;
-        text-decoration: none;
-    }
-    .image{
-        width: 100%;
-        height: 200px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-    }
-    .card{
-        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
-        margin-left: 4vw;
-        border-radius: 20px;
-        background-color: white;
-        width: 90%;
-        height: 290px;
-    }
-    .card p{
-        font-weight: 800;
-        font-size: 4vw;
-        margin:0;
-        margin-left: 3vw;
-        margin-top: 10px;
-    }
-    .card .subtitles{
-        font-weight: 500;
-        color: rgb(107, 107, 107);
-        margin-top: 1vw;
-        font-size: 3.5vw;
-    }
+  /*-------------------FONCTIONNEMENT-------------------*/
+  h2 {
+    font-size: 5vw;
+    font-weight: 700;
+    margin-left: 3vw;
+  }
 
+  ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+
+  ol {
+    list-style: none;
+    counter-reset: item;
+  }
+
+  li:before {
+    position: absolute;
+    color: white;
+    content: counter(item);
+    height: 20px;
+    width: 20px;
+    vertical-align: top;
+    text-align: center;
+    background: #9356DC;
+    border-radius: 20px;
+    margin-right: 63vw;
+  }
+
+  li {
+    position: relative;
+    list-style-type: none;
+    counter-increment: item;
+    background-color: rgba(233, 233, 233, 0.486);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    border-radius: 20px;
+    width: 70%;
+    height: 60px;
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10vw;
+  }
+  li i.fa {
+    color: #9b9b9b;
+    margin-right: 3vw;
+  }
+  li i.fas {
+    color: #9b9b9b;
+    margin-right: 3vw;
+  }
+
+  .background {
+    position: relative;
+    list-style-type: none;
+    counter-increment: item;
+    background-color: #9256dc1a;
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    border-radius: 20px;
+    width: 70%;
+    height: 60px;
+    margin: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10vw;
+  }
+  .background i.fas {
+    color: #9356DC;
+  }
+
+  /*------------------RESTAURANTS------------*/
+  h3 {
+    font-size: 5vw;
+    font-weight: 700;
+    margin-left: 3vw;
+    padding-top: 30px;
+  }
+
+  .thrid-container {
+    background-color: rgba(233, 233, 233, 0.486);
+  }
+  .thrid-container a {
+    color: black;
+    text-decoration: none;
+  }
+
+  .image {
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+
+  .card {
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    margin-left: 4vw;
+    border-radius: 20px;
+    background-color: white;
+    width: 90%;
+    height: 290px;
+  }
+  .card p {
+    font-weight: 800;
+    font-size: 4vw;
+    margin: 0;
+    margin-left: 3vw;
+    margin-top: 10px;
+  }
+  .card .subtitles {
+    font-weight: 500;
+    color: #6b6b6b;
+    margin-top: 1vw;
+    font-size: 3.5vw;
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
