--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,9 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
     margin: 0;
+    img{
+        object-fit: cover;
+    }
 }
 
 
@@ -133,19 +136,8 @@ html, body {
         counter-reset: item;
 
     }
-    li:before{
-        position: absolute;
-        color: rgb(255, 255, 255);
-        content: counter(item);
-        height: 20px;
-        width: 20px;
-        vertical-align: top;
-        text-align: center;
-        background: #9356DC;
-        border-radius: 20px;
-        margin-right: 63vw;
-    }
-    li{ 
+
+    .top{ 
         position: relative;
         list-style-type: none;
         counter-increment: item;
@@ -159,6 +151,20 @@ html, body {
         justify-content: center;
         align-items:center;
         margin-left: 10vw;
+        
+        &:before{
+            position: absolute;
+            color: rgb(255, 255, 255);
+            content: counter(item);
+            height: 20px;
+            width: 20px;
+            vertical-align: top;
+            text-align: center;
+            background: #9356DC;
+            border-radius: 20px;
+            margin-right: 63vw;
+        }
+        
         i.fa{
             color: rgb(155, 155, 155);
             margin-right: 3vw;
@@ -187,7 +193,20 @@ html, body {
 
         i.fas{
             color: #9356DC;
+            margin-right: 3vw;
     
+        }
+        &:before{
+            position: absolute;
+            color: rgb(255, 255, 255);
+            content: counter(item);
+            height: 20px;
+            width: 20px;
+            vertical-align: top;
+            text-align: center;
+            background: #9356DC;
+            border-radius: 20px;
+            margin-right: 63vw;
         }
     }
 /*------------------RESTAURANTS------------*/
@@ -201,6 +220,7 @@ html, body {
     }
     .thrid-container{
         background-color: rgba(233, 233, 233, 0.486);
+        padding-bottom: 30px;
         a{
             color: black;
             text-decoration: none;
@@ -214,7 +234,12 @@ html, body {
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
     }
+    %survol{
+        transform: scale(1.05);
+        cursor: pointer;
+    }
     .card{
+        
         box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
         margin-left: 4vw;
         border-radius: 20px;
@@ -226,7 +251,7 @@ html, body {
             font-size: 4vw;
             margin:0;
             margin-left: 3vw;
-            margin-top: 10px;
+            margin-top: 15px;
         }
         .subtitles{
             font-weight: 500;
@@ -234,6 +259,46 @@ html, body {
             margin-top: 1vw;
             font-size: 3.5vw;
         }
-    }
+        &:hover{
+            @extend %survol;
+        }
+        span{
+            font-size: 7vw;
+            display:flex;
+            justify-content: flex-end;
+            height: 25px;
+            width: 90%;
+            
+            
+            
 
+            i{
+ 
+            }
+            
+        }
+    }
+    
+        .end{
+            background-color: rgb(66, 66, 66);
+            padding-top: 0;
+            margin-top: 0;
+            padding-bottom: 20px;
+        
+            h3{
+                margin: 0;
+                margin-left: 2vw;
+                
+            }
+           
+             li{
+                list-style: none;
+                margin: 5px;
+                color: white;
+            }
+            i.fas{
+                color: white;
+                margin-right: 10px;
+            }
+        }
 }
