--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ html, body {
   overflow-x: hidden;
   margin: 0;
 }
+html img, body img {
+  object-fit: cover;
+}
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
@@ -126,20 +129,7 @@ html, body {
     counter-reset: item;
   }
 
-  li:before {
-    position: absolute;
-    color: white;
-    content: counter(item);
-    height: 20px;
-    width: 20px;
-    vertical-align: top;
-    text-align: center;
-    background: #9356DC;
-    border-radius: 20px;
-    margin-right: 63vw;
-  }
-
-  li {
+  .top {
     position: relative;
     list-style-type: none;
     counter-increment: item;
@@ -154,11 +144,23 @@ html, body {
     align-items: center;
     margin-left: 10vw;
   }
-  li i.fa {
+  .top:before {
+    position: absolute;
+    color: white;
+    content: counter(item);
+    height: 20px;
+    width: 20px;
+    vertical-align: top;
+    text-align: center;
+    background: #9356DC;
+    border-radius: 20px;
+    margin-right: 63vw;
+  }
+  .top i.fa {
     color: #9b9b9b;
     margin-right: 3vw;
   }
-  li i.fas {
+  .top i.fas {
     color: #9b9b9b;
     margin-right: 3vw;
   }
@@ -180,6 +182,19 @@ html, body {
   }
   .background i.fas {
     color: #9356DC;
+    margin-right: 3vw;
+  }
+  .background:before {
+    position: absolute;
+    color: white;
+    content: counter(item);
+    height: 20px;
+    width: 20px;
+    vertical-align: top;
+    text-align: center;
+    background: #9356DC;
+    border-radius: 20px;
+    margin-right: 63vw;
   }
 
   /*------------------RESTAURANTS------------*/
@@ -192,6 +207,7 @@ html, body {
 
   .thrid-container {
     background-color: rgba(233, 233, 233, 0.486);
+    padding-bottom: 30px;
   }
   .thrid-container a {
     color: black;
@@ -203,6 +219,11 @@ html, body {
     height: 200px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+  }
+
+  .card:hover {
+    transform: scale(1.05);
+    cursor: pointer;
   }
 
   .card {
@@ -218,13 +239,39 @@ html, body {
     font-size: 4vw;
     margin: 0;
     margin-left: 3vw;
-    margin-top: 10px;
+    margin-top: 15px;
   }
   .card .subtitles {
     font-weight: 500;
     color: #6b6b6b;
     margin-top: 1vw;
     font-size: 3.5vw;
+  }
+  .card span {
+    font-size: 7vw;
+    display: flex;
+    justify-content: flex-end;
+    height: 25px;
+    width: 90%;
+  }
+  .end {
+    background-color: #424242;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 20px;
+  }
+  .end h3 {
+    margin: 0;
+    margin-left: 2vw;
+  }
+  .end li {
+    list-style: none;
+    margin: 5px;
+    color: white;
+  }
+  .end i.fas {
+    color: white;
+    margin-right: 10px;
   }
 }
 
