--- a/sass/style.scss
+++ b/sass/style.scss
@@ -240,42 +240,49 @@ html, body {
     }
     .card{
         
+        display: flex;
+        flex-direction: column;
         box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
         margin-left: 4vw;
         border-radius: 20px;
         background-color: white;
         width: 90%;
-        height: 290px;
+        height: 270px;
         p{
             font-weight: 800;
             font-size: 4vw;
             margin:0;
             margin-left: 3vw;
             margin-top: 15px;
+            width: 70%;
         }
         .subtitles{
             font-weight: 500;
             color: rgb(107, 107, 107);
             margin-top: 1vw;
             font-size: 3.5vw;
+            width: 70%;
+            padding-bottom: 5vw;
         }
-        &:hover{
-            @extend %survol;
-        }
-        span{
-            font-size: 7vw;
-            display:flex;
-            justify-content: flex-end;
-            height: 25px;
-            width: 90%;
-            
-            
-            
 
-            i{
- 
+        .figcap{
+            display: flex;
+            flex-direction: column;
+
+            p{
+                width: 70%;
             }
-            
+           
+            span{
+                font-size: 6vw;
+                display: flex;
+                justify-content: flex-end;
+                position: absolute;
+                width: 85%;
+                margin-top: 20px;
+
+            }
+              
         }
     }
     
