--- a/style.css
+++ b/style.css
@@ -221,18 +221,15 @@ html img, body img {
     border-top-right-radius: 20px;
   }
 
-  .card:hover {
-    transform: scale(1.05);
-    cursor: pointer;
-  }
-
   .card {
+    display: flex;
+    flex-direction: column;
     box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     margin-left: 4vw;
     border-radius: 20px;
     background-color: white;
     width: 90%;
-    height: 290px;
+    height: 270px;
   }
   .card p {
     font-weight: 800;
@@ -240,20 +237,32 @@ html img, body img {
     margin: 0;
     margin-left: 3vw;
     margin-top: 15px;
+    width: 70%;
   }
   .card .subtitles {
     font-weight: 500;
     color: #6b6b6b;
     margin-top: 1vw;
     font-size: 3.5vw;
+    width: 70%;
+    padding-bottom: 5vw;
   }
-  .card span {
-    font-size: 7vw;
+  .card .figcap {
+    display: flex;
+    flex-direction: column;
+  }
+  .card .figcap p {
+    width: 70%;
+  }
+  .card .figcap span {
+    font-size: 6vw;
     display: flex;
     justify-content: flex-end;
-    height: 25px;
-    width: 90%;
+    position: absolute;
+    width: 85%;
+    margin-top: 20px;
   }
+
   .end {
     background-color: #424242;
     padding-top: 0;
