--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ html img, body img {
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
+  /*---------------------------------REGLES et VARIABLES------------------*/
+  .card, .background, .top {
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+  }
+
   /*----------------------------------------HEADER---------------------------------------------------------*/
   header {
     background-color: white;
@@ -107,7 +112,11 @@ html img, body img {
     border: none;
     align-self: center;
     background: linear-gradient(#FF79DA, #9356DC);
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+  }
+  .explorer:hover {
+    filter: brightness(150%);
+    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+    transform: scale(1.05);
   }
 
   /*-------------------FONCTIONNEMENT-------------------*/
@@ -134,7 +143,6 @@ html img, body img {
     list-style-type: none;
     counter-increment: item;
     background-color: rgba(233, 233, 233, 0.486);
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     border-radius: 20px;
     width: 70%;
     height: 60px;
@@ -170,7 +178,6 @@ html img, body img {
     list-style-type: none;
     counter-increment: item;
     background-color: #9256dc1a;
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     border-radius: 20px;
     width: 70%;
     height: 60px;
@@ -224,7 +231,6 @@ html img, body img {
   .card {
     display: flex;
     flex-direction: column;
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
     margin-left: 4vw;
     border-radius: 20px;
     background-color: white;
@@ -254,15 +260,25 @@ html img, body img {
   .card .figcap p {
     width: 70%;
   }
-  .card .figcap span {
+  .card .figcap .heart {
     font-size: 6vw;
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    width: 85%;
     margin-top: 20px;
+    margin-left: 75vw;
+    border: none;
+    background-color: white;
+    color: white;
+  }
+  .card .figcap i.fas {
+    /* text-shadow: 0 0  2px #000;*/
+    -webkit-text-fill-color: white;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
   }
 
+  /*-------------------------------------------FOOTER----------------------------------------*/
   .end {
     background-color: #424242;
     padding-top: 0;
@@ -271,7 +287,7 @@ html img, body img {
   }
   .end h3 {
     margin: 0;
-    margin-left: 2vw;
+    margin-left: 9vw;
   }
   .end li {
     list-style: none;
