--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+/*./dart-sass/sass sass/style.scss style.css --watch*/
 *{
     scroll-behavior: smooth;
     transition: 0.3s;
@@ -125,6 +126,7 @@ $tertiary:#99E2D0;
         border:none;
         align-self: center;
         background: linear-gradient($secondary, $primary);
+        
         &:hover{
             filter: brightness(150%);
                 box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
@@ -297,7 +299,7 @@ $tertiary:#99E2D0;
                 margin-top: 20px;
                 margin-left: 75vw;
                 border: none;
-                background-color: rgb(255, 255, 255);
+                background-color: white;
                 color: white;
             }
             i.fas{
@@ -305,6 +307,16 @@ $tertiary:#99E2D0;
                -webkit-text-fill-color: white;
                -webkit-text-stroke-width: 2px;
                -webkit-text-stroke-color: black;
+               &:hover{
+                transition:transform 450ms;
+                transition: -webkit-text-fill-color 600ms ;
+                transform: scale(1.1);
+                transition-delay: -webkit-text-stroke-width 150ms;
+                -webkit-text-fill-color: $tertiary;
+                -webkit-text-stroke-width: 0;
+
+
+               }
             }
               
         }
