--- a/pages/sass/style2.scss
+++ b/pages/sass/style2.scss
@@ -8,6 +8,7 @@ html, body {
     max-width: 100%;
     overflow-x: hidden;
     margin: 0;
+    background-color: rgb(238, 238, 238);;
     img{
         object-fit: cover;
         
@@ -15,52 +16,215 @@ html, body {
     /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
     /*---------------------------------REGLES et VARIABLES------------------*/
-    .card, .background, .top {
-      box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    $primary:#9356DC;
+    $secondary:#FF79DA;
+    $tertiary:#99E2D0;
+    %titles{
+        font-size: 5vw;
+        color: rgb(119, 119, 119);
+        padding-bottom: 1px;
+        border-bottom:  #99E2D0 solid 2px;
+        width: 10%;
+        margin-left: 6vw;
     }
+    %shadows{
+        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);}
+    %hovernshadows{ 
+        box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
+    }
+    
   
     /*----------------------------------------HEADER---------------------------------------------------------*/
-    header {
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-evenly;
-      flex-direction: row;
-      padding: 10px 16px;
-      height: 40px;
-      width: 100%;
-      border-bottom-color: rgba(58, 58, 58, 0.288);
-      border-bottom-style: solid;
-      padding-top: 20px;
+    header{
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: row;
+        padding: 10px 16px;
+        height: 40px;
+        width: 100%;
+        padding-top: 20px;
+        
+        i.fas{
+            color: rgb(65, 65, 65)
+        }
+        
+        span{
+            display:block;
+            width: 20px;
+            margin-right: 65px;
+        }
+
+       
+
+    }
+    #head{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+
+    }
+   
+    .logo{
+        height: 10vw;
+        margin-right: 90px;
     
-    }
-    header span {
-      display: block;
-      width: 20px;
-      margin-right: 65px;
-    }
-  
-    #head {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: row;
-    }
-  
-    .logo {
-      height: 10vw;
-      margin-right: 90px;
     }
 }
 /*-----------------BANNIERE----------------------------*/
-    .banniere
+    
+.overlap{
+    width: 100%;
+    height: 300px;
+    position: absolute;
+}
+.banniere
     {
         width: 100%;
         height: 300px;
+        position: relative;
+        
     }
 /*---------------------------SECTION1--------------------------*/ 
-   
+ .title{
+    background-color: rgb(238, 238, 238);
+    padding-top: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    position: relative;
+    width: 100%;
+    margin-top: 250px;
+    padding-bottom: 5px;
+    h1{
+        display: flex;
+        align-self: center;
+        justify-content: space-between;
+        margin-left: 3vw;
+        font-family: 'Shrikhand', cursive;
+        font-size: 7vw;
+        .heart{
+                font-size: 6vw;
+                display: flex;
+                justify-content: flex-end;
+                position: absolute;
+                margin-top: 8px;
+                margin-left: 75vw;
+                border: none;
+                background-color: rgb(238, 238, 238);
+                color: white;
+
+        
+            i.fas{
+
+                -webkit-text-fill-color:  rgb(238, 238, 238);
+                -webkit-text-stroke-width: 2px;
+                -webkit-text-stroke-color: black;
+                &:hover{
+                    transition:transform 450ms;
+                    transition: -webkit-text-fill-color 600ms ;
+                    transform: scale(1.1);
+                    transition-delay: -webkit-text-stroke-width 150ms;
+                    -webkit-text-fill-color: #99E2D0;
+                    -webkit-text-stroke-width: 0;
+                    cursor: pointer;
+                    }
+                
+                }
+            }
+        }
+    }
+    
+    .first-container{
+        background-color: rgb(238, 238, 238);
+        .first-container-wrapper{
+
+            h2, h2, h3, h4{
+                @extend %titles;
+                
+
+            }
+            .container{
+                background-color: white;
+                border-radius: 20px;
+                width: 90%;
+                height: 60px;
+                margin: 20px;
+                @extend %shadows;
+                display: flex;
+                flex-direction: column;
+                .check{
+                    display: none;
+                
+                }
+                &:hover{
+                    .check{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 15%;
+                        height: 60px;
+                        position:absolute;
+                        font-size: 8vw;
+                        margin-left: 75vw;
+                        border-bottom-right-radius: 20px;
+                        border-top-right-radius: 20px;
+                        border: none;
+                        color: white;
+                        background-color:#99E2D0;
+                        cursor: pointer;
+                    }
+                    .price {
+                        margin-left: 60vw;
+                    }
+                    .sub{
+                        transition-delay: 5ms;
+                        width: 60%;
+                    }
+
+                }
+
+                p{
+                    margin: 5px;
+                    margin-left: 3vw;
+                    
+
+                   
+
+                }
+                .bold{
+                    font-weight: bolder;
+                    font-weight: 7vw;
+                }
+                .price{
+                    font-size: 3.5vw;
+                    font-weight: bolder;
+                    display: flex;
+                    justify-content:flex-end;
+                    flex-wrap: wrap;
+                    width: 10%;
+                    position:absolute;
+                    margin-top: 9vw;
+                    margin-left: 70vw;
+                    padding-right: 9.5vw;
+                    
+                }
+                .sub{
+                    font-size: 4vw;
+                    color: rgb(112, 112, 112);
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    width: 75%;
+                }
+                
+               
+            }
+
+        }
+    }
 
 
 
@@ -70,25 +234,32 @@ html, body {
 
 
 
+/*---------------------FIN----------------*/
+    .select{   
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        
+        .explorer {
+            color: floralwhite;
+            font-weight: bold;
+            width: 50%;
+            height: 11vw;
+            border-radius: 20px;
+            border: none;
+            align-self: center;
 
-
-
-
-  .explorer {
-    color: floralwhite;
-    font-weight: bold;
-    width: 50%;
-    height: 11vw;
-    border-radius: 20px;
-    border: none;
-    align-self: center;
-    background: linear-gradient(#FF79DA, #9356DC);
-  }
-  .explorer:hover {
-    filter: brightness(150%);
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
-    transform: scale(1.05);
-  }
+            background: linear-gradient(#FF79DA, #9356DC);
+        }
+        .explorer:hover {
+            filter: brightness(150%);
+            box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
+            transform: scale(1.05);
+            cursor: pointer;
+        }
+    }    
 /*-------------------------------------------FOOTER----------------------------------------*/
 .end {
     background-color: #424242;
