--- a/pages/sass/style2.scss
+++ b/pages/sass/style2.scss
@@ -147,6 +147,7 @@ html, body {
 
             }
             .container{
+                position: relative;
                 background-color: white;
                 border-radius: 20px;
                 width: 90%;
@@ -155,26 +156,37 @@ html, body {
                 @extend %shadows;
                 display: flex;
                 flex-direction: column;
+                overflow: hidden;
+                cursor: pointer;
+                
                 .check{
-                    display: none;
+                    
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 60px;
+                    height: 60px;
+                    position:absolute;
+                    right: -100px;
+                    font-size: 8vw;
+                    margin-left: 75vw;
+                    border-bottom-right-radius: 20px;
+                    border-top-right-radius: 20px;
+                    border: none;
+                    color: white;
+                    background-color:#99E2D0;
+
+
                 
                 }
                 &:hover{
                     .check{
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 15%;
-                        height: 60px;
-                        position:absolute;
-                        font-size: 8vw;
-                        margin-left: 75vw;
-                        border-bottom-right-radius: 20px;
-                        border-top-right-radius: 20px;
-                        border: none;
-                        color: white;
-                        background-color:#99E2D0;
-                        cursor: pointer;
+                        transition: 0.5s;
+                        right: 0;
+                        i.fas {
+                            transform: rotate(-360deg);
+                            transition: transform 500ms ease-in-out;
+                        }
                     }
                     .price {
                         margin-left: 60vw;
