--- a/pages/style2.css
+++ b/pages/style2.css
@@ -94,8 +94,16 @@ html .title h1, body .title h1 {
   font-family: "Shrikhand", cursive;
   font-size: 7vw;
 }
+html .title h1 svg, body .title h1 svg {
+  height: 10vw;
+  width: 8vw;
+  margin-right: 10vw;
+  color: rgba(255, 255, 255, 0);
+  stroke: #818181;
+  stroke-width: 10vw;
+}
 html .title h1 .heart, body .title h1 .heart {
-  font-size: 6vw;
+  font-size: 5vw;
   display: flex;
   justify-content: flex-end;
   position: absolute;
@@ -104,20 +112,7 @@ html .title h1 .heart, body .title h1 .heart {
   border: none;
   background-color: #eeeeee;
   color: white;
-}
-html .title h1 .heart i.fas, body .title h1 .heart i.fas {
-  -webkit-text-fill-color: #eeeeee;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: black;
-}
-html .title h1 .heart i.fas:hover, body .title h1 .heart i.fas:hover {
-  transition: transform 450ms;
-  transition: -webkit-text-fill-color 600ms;
-  transform: scale(1.1);
-  transition-delay: -webkit-text-stroke-width 150ms;
-  -webkit-text-fill-color: #99E2D0;
-  -webkit-text-stroke-width: 0;
-  cursor: pointer;
+  width: 10vw;
 }
 html .first-container, body .first-container {
   background-color: #eeeeee;
@@ -155,15 +150,14 @@ html .first-container .first-container-wrapper .container:hover .check, body .fi
   right: 0;
 }
 html .first-container .first-container-wrapper .container:hover .check i.fas, body .first-container .first-container-wrapper .container:hover .check i.fas {
-  transform: rotate(-360deg);
-  transition: transform 500ms ease-in-out;
+  transform: rotate(360deg);
+  transition: transform 550ms ease-in-out;
 }
 html .first-container .first-container-wrapper .container:hover .price, body .first-container .first-container-wrapper .container:hover .price {
   margin-left: 60vw;
 }
 html .first-container .first-container-wrapper .container:hover .sub, body .first-container .first-container-wrapper .container:hover .sub {
-  transition-delay: 5ms;
-  width: 60%;
+  width: 65%;
 }
 html .first-container .first-container-wrapper .container p, body .first-container .first-container-wrapper .container p {
   margin: 5px;
@@ -191,7 +185,7 @@ html .first-container .first-container-wrapper .container .sub, body .first-cont
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  width: 75%;
+  width: 78%;
 }
 html .select, body .select {
   display: flex;
