--- a/pages/sass/style2.scss
+++ b/pages/sass/style2.scss
@@ -207,12 +207,17 @@ html, body {
                     right: 0;
                     i.fas {
                         transform: rotate(360deg);
-                        transition: transform 250ms ease-in-out;
+                        transition: 550ms linear;
                     }
+                    
                 }
                 &:hover > .price{
                     left:60vw;
                 }
+                &:hover > .sub{
+                    width: 65%;
+                }
+
                 
                 .check{
                     
@@ -234,7 +239,12 @@ html, body {
                 }
 
                     .sub{
-                        width: 65%;
+                        font-size: 4vw;
+                        color: rgb(112, 112, 112);
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        width: 78%;
                     }
 
                 }
@@ -263,14 +273,7 @@ html, body {
                     left: 70vw;
                     
                 }
-                .sub{
-                    font-size: 4vw;
-                    color: rgb(112, 112, 112);
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    width: 78%;
-                }
+               
                 
                
             }
