--- a/pages/sass/style2.scss
+++ b/pages/sass/style2.scss
@@ -41,25 +41,27 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fafafa;
+    background-color: #d8d2df;
     z-index: 999;
     transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-    animation-iteration-count: 3;
-    animation: backload 3s ease forwards;
+    animation: backload 2s ease forwards;
     .loader{
-        width: 120px;
-        height: 120px;
-        border: 14px solid rgb(228, 228, 228);
+        width: 60px;
+        height: 60px;
+        border: 5px solid rgb(228, 228, 228);
         border-radius: 50%;
-        border-top: 14px solid #99E2D0;
+        border-top: 5px solid #99E2D0;
         position: absolute;
-        top: 50%;
+        top: 40%;
         left: 50%;
-        animation-iteration-count: 3;
-        animation: loader 3s ease forwards;
+        animation: loader 0.5s ease infinite;
 
     }
     @keyframes backload{
+        80%{
+            opacity: 1;
+            visibility: visible;
+        }
 
         100%{
             opacity:0;
@@ -73,8 +75,6 @@ html, body {
         }
         100%{
             transform: translate(-50%, -50%) rotate(360deg);
-            opacity:0;
-            visibility: hidden;
         }
     }   
 }
@@ -205,9 +205,10 @@ html, body {
                         
                     transition: 0.5s;
                     right: 0;
+                    transition: 500ms ease-in-out;
                     i.fas {
                         transform: rotate(360deg);
-                        transition: 550ms linear;
+                        transition: 700ms linear;
                     }
                     
                 }
