--- a/pages/style2.css
+++ b/pages/style2.css
@@ -41,25 +41,27 @@ html img, body img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fafafa;
+    background-color: #d8d2df;
     z-index: 999;
     transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-    animation-iteration-count: 3;
-    animation: backload 3s ease forwards;
+    animation: backload 2s ease forwards;
   }
   html .loader-container .loader, body .loader-container .loader {
-    width: 120px;
-    height: 120px;
-    border: 14px solid #e4e4e4;
+    width: 60px;
+    height: 60px;
+    border: 5px solid #e4e4e4;
     border-radius: 50%;
-    border-top: 14px solid #99E2D0;
+    border-top: 5px solid #99E2D0;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    animation-iteration-count: 3;
-    animation: loader 3s ease forwards;
+    animation: loader 0.5s ease infinite;
   }
   @keyframes backload {
+    80% {
+      opacity: 1;
+      visibility: visible;
+    }
     100% {
       opacity: 0;
       visibility: hidden;
@@ -71,8 +73,6 @@ html img, body img {
     }
     100% {
       transform: translate(-50%, -50%) rotate(360deg);
-      opacity: 0;
-      visibility: hidden;
     }
   }
   html header, body header {
@@ -172,10 +172,11 @@ html .first-container .first-container-wrapper .container, body .first-container
 html .first-container .first-container-wrapper .container:hover .check, body .first-container .first-container-wrapper .container:hover .check {
   transition: 0.5s;
   right: 0;
+  transition: 500ms ease-in-out;
 }
 html .first-container .first-container-wrapper .container:hover .check i.fas, body .first-container .first-container-wrapper .container:hover .check i.fas {
   transform: rotate(360deg);
-  transition: 550ms linear;
+  transition: 700ms linear;
 }
 html .first-container .first-container-wrapper .container:hover > .price, body .first-container .first-container-wrapper .container:hover > .price {
   left: 60vw;
