--- a/style.css
+++ b/style.css
@@ -28,23 +28,27 @@ html img, body img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #fafafa;
+    background-color: #d8d2df;
     z-index: 999;
     transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-    animation: backload 1s ease forwards;
+    animation: backload 2s ease forwards;
   }
   .loader-container .loader {
-    width: 120px;
-    height: 120px;
-    border: 14px solid #e4e4e4;
+    width: 60px;
+    height: 60px;
+    border: 5px solid #e4e4e4;
     border-radius: 50%;
-    border-top: 14px solid #99E2D0;
+    border-top: 5px solid #99E2D0;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    animation: loader 1s ease forwards;
+    animation: loader 0.5s ease infinite;
   }
   @keyframes backload {
+    80% {
+      opacity: 1;
+      visibility: visible;
+    }
     100% {
       opacity: 0;
       visibility: hidden;
@@ -56,8 +60,6 @@ html img, body img {
     }
     100% {
       transform: translate(-50%, -50%) rotate(360deg);
-      opacity: 0;
-      visibility: hidden;
     }
   }
 
