--- a/sass/style.scss
+++ b/sass/style.scss
@@ -340,31 +340,44 @@ $tertiary:#99E2D0;
             }
            
             .heart{
-                font-size: 6vw;
+                font-size: 8vw;
                 display: flex;
                 justify-content: flex-end;
                 position: absolute;
-                margin-top: 20px;
-                margin-left: 75vw;
+                right: 10vw;
+                height: 15vw;
+                width: 9vw;
                 border: none;
-                background-color: white;
-                color: white;
-            }
-            i.fas{
-               /* text-shadow: 0 0  2px #000;*/
-               -webkit-text-fill-color: white;
-               -webkit-text-stroke-width: 2px;
-               -webkit-text-stroke-color: black;
-               &:hover{
-                transition:transform 450ms;
-                transition: -webkit-text-fill-color 600ms ;
-                transform: scale(1.1);
-                transition-delay: -webkit-text-stroke-width 150ms;
-                -webkit-text-fill-color: $tertiary;
-                -webkit-text-stroke-width: 0;
+                background:rgba(0, 0, 0, 0);
+                cursor: pointer;
+                i.far{
+                    color: rgb(104, 101, 101);
+                    position: absolute;
+                    top: 4vw;
+                    opacity: 1;
+                    
+                    &:hover{
+                        opacity: 0;
+                    }
+                }
+                i.fas{
+                    opacity: 0;
+                    position: absolute;
+                    top: 4vw;
+                    background: -webkit-linear-gradient(#FF79DA, #9356DC);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                   
+                    &:hover{
+                        font-size: 8.5vw;
+                        transition: 600ms;
+                        opacity: 1;
+                        
+                    }
+                  }
 
-
-               }
+                 
+                
             }
               
         }
@@ -375,6 +388,10 @@ $tertiary:#99E2D0;
             padding-top: 0;
             margin-top: 0;
             padding-bottom: 20px;
+            a{
+                color: rgb(255, 255, 255);
+                text-decoration: none;
+            }
         
             h3{
                 margin: 0;
@@ -386,6 +403,7 @@ $tertiary:#99E2D0;
                 list-style: none;
                 margin: 5px;
                 color: white;
+                
             }
             i.fas{
                 color: white;
