--- a/style.css
+++ b/style.css
@@ -304,29 +304,38 @@ html img, body img {
     width: 70%;
   }
   .card .figcap .heart {
-    font-size: 6vw;
+    font-size: 8vw;
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    margin-top: 20px;
-    margin-left: 75vw;
+    right: 10vw;
+    height: 15vw;
+    width: 9vw;
     border: none;
-    background-color: white;
-    color: white;
+    background: rgba(0, 0, 0, 0);
+    cursor: pointer;
   }
-  .card .figcap i.fas {
-    /* text-shadow: 0 0  2px #000;*/
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
+  .card .figcap .heart i.far {
+    color: #686565;
+    position: absolute;
+    top: 4vw;
+    opacity: 1;
   }
-  .card .figcap i.fas:hover {
-    transition: transform 450ms;
-    transition: -webkit-text-fill-color 600ms;
-    transform: scale(1.1);
-    transition-delay: -webkit-text-stroke-width 150ms;
-    -webkit-text-fill-color: #99E2D0;
-    -webkit-text-stroke-width: 0;
+  .card .figcap .heart i.far:hover {
+    opacity: 0;
+  }
+  .card .figcap .heart i.fas {
+    opacity: 0;
+    position: absolute;
+    top: 4vw;
+    background: -webkit-linear-gradient(#FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .card .figcap .heart i.fas:hover {
+    font-size: 8.5vw;
+    transition: 600ms;
+    opacity: 1;
   }
 
   /*-------------------------------------------FOOTER----------------------------------------*/
@@ -335,6 +344,10 @@ html img, body img {
     padding-top: 0;
     margin-top: 0;
     padding-bottom: 20px;
+  }
+  .end a {
+    color: white;
+    text-decoration: none;
   }
   .end h3 {
     margin: 0;
