--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,172 +18,83 @@ html, body {
 
 /*-----------------------------------FORMAT MOBILE------------------------------------------------*/
 @media (max-width: 498px) {
-/*---------------------------------REGLES et VARIABLES------------------*/
-$primary:#9356DC;
-$secondary:#FF79DA;
-$tertiary:#99E2D0;
-%shadows{
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);}
-%hovernshadows{ 
-    box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.082);
-}
-
+/*---------------------------------REGLES MIXIN VARIABLES------------------*/
+@import "./utils/variables";
+@import "./utils/mixin";
 
   /*-------------------- LOADING -----------------------*/
 
-.loader-container{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #d8d2df;
-    z-index: 999;
-    transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-    animation: backload 2s ease forwards;
-    .loader{
-        width: 60px;
-        height: 60px;
-        border: 5px solid rgb(228, 228, 228);
-        border-radius: 50%;
-        border-top: 5px solid #99E2D0;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        animation: loader 0.5s ease infinite;
-
-    }
-    @keyframes backload{
-        80%{
-            opacity: 1;
-            visibility: visible;
-        }
-
-        100%{
-            opacity:0;
-            visibility: hidden;
-        }
-    }  
-    @keyframes loader {
-        0%{
-            transform: translate(-50%, -50%) rotate(0deg);
-
-        }
-        100%{
-            transform: translate(-50%, -50%) rotate(360deg);
-        }
-    }   
-}
+@import "./components/loader.scss";
 
 /*----------------------------------------HEADER---------------------------------------------------------*/
-    header{
-        background-color: rgb(255, 255, 255);
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        flex-direction: row;
-        padding: 10px 16px;
-        height: 40px;
-        width: 100%;
-        border-bottom-color: rgba(58, 58, 58, 0.288);
-        border-bottom-style: solid;
-        padding-top: 20px;
-        
-        i.fas{
-            display: none;
-        }
-        
-        span{
-            display:block;
-            width: 20px;
-            margin-right: 65px;
-        }
+ @import "./layout/header.scss";
 
-       
-
-    }
-    #head{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-
-    }
+ .place{
+    color: rgb(88, 88, 88);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    background-color: rgba(190, 190, 190, 0.397) ;
    
-    .logo{
-        height: 10vw;
-        margin-right: 90px;
-    
+    i.fas{
+        margin-right: 2vw;
     }
-    .place{
-        color: rgb(88, 88, 88);
-        display: flex;
-        align-content: center;
-        justify-content: center;
-        width: 100%;
-        height: 50px;
-        padding-top: 10px;
-        background-color: rgba(190, 190, 190, 0.397) ;
-       
-        i.fas{
-            margin-right: 2vw;
-        }
-   }
- 
-    .first-container-wrapper{
-        background-color: rgba(233, 233, 233, 0.486);
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-        justify-content: center;
-        text-align: center;
-        padding-bottom: 30px;
-    }
-    h1{
-        padding-top: 10px;
-        font-size: 4.5vw;
-        display: flex;
-        align-self: center;
-        align-content: center;
-        justify-content: center;
-        width: 49vw;
-        margin: 0;
-        margin-top:10px;
-       
-        p{
-        margin: 0;
-        padding: 0;
+}
 
+.first-container-wrapper{
+    background-color: rgba(233, 233, 233, 0.486);
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 30px;
+}
+h1{
+    padding-top: 10px;
+    font-size: 4.5vw;
+    display: flex;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
+    width: 49vw;
+    margin: 0;
+    margin-top:10px;
+   
+    p{
+    margin: 0;
+    padding: 0;
+
+    }
+}
+.sub{
+    display: inline-block;
+    text-align: center;
+    color: rgb(99, 99, 99);
+    width: 80%;
+    
+}
+.explorer
+{
+    color: floralwhite;
+    font-weight: bold;
+    width: 50%;
+    height:11vw;
+    border-radius: 20px;
+    border:none;
+    align-self: center;
+    @include grad;
+    
+    &:hover{
+           @include hoverbtn;
+            
         }
-    }
-    .sub{
-        display: inline-block;
-        text-align: center;
-        color: rgb(99, 99, 99);
-        width: 80%;
-        
-    }
-    .explorer
-    {
-        color: floralwhite;
-        font-weight: bold;
-        width: 50%;
-        height:11vw;
-        border-radius: 20px;
-        border:none;
-        align-self: center;
-        background: linear-gradient($secondary, $primary);
-        
-        &:hover{
-            filter: brightness(150%);
-                box-shadow: 15px 5px 10px rgba(0, 0, 0, 0.308);
-                transform: scale(1.05);
-                
-            }
-        
-        
-    }
+    
+    
+}
     /*-------------------FONCTIONNEMENT-------------------*/
     h2{
         font-size: 5vw;
@@ -207,7 +118,7 @@ $tertiary:#99E2D0;
         list-style-type: none;
         counter-increment: item;
         background-color: rgba(233, 233, 233, 0.486);
-        @extend %shadows;
+        @include shadows;
         border-radius: 20px;
         width: 70%;
         height: 60px;
@@ -246,7 +157,7 @@ $tertiary:#99E2D0;
         list-style-type: none;
         counter-increment: item;
         background-color: #9256dc1a;
-        @extend %shadows;
+        @include shadows;
         border-radius: 20px;
         width: 70%;
         height: 60px;
@@ -299,15 +210,12 @@ $tertiary:#99E2D0;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
     }
-    %survol{
-        transform: scale(1.05);
-        cursor: pointer;
-    }
+
     .card{
         
         display: flex;
         flex-direction: column;
-        @extend %shadows;
+        @include shadows;
         margin-left: 4vw;
         border-radius: 20px;
         background-color: white;
@@ -338,76 +246,12 @@ $tertiary:#99E2D0;
             p{
                 width: 70%;
             }
-           
-            .heart{
-                font-size: 8vw;
-                display: flex;
-                justify-content: flex-end;
-                position: absolute;
-                right: 10vw;
-                height: 15vw;
-                width: 9vw;
-                border: none;
-                background:rgba(0, 0, 0, 0);
-                cursor: pointer;
-                i.far{
-                    color: rgb(104, 101, 101);
-                    position: absolute;
-                    top: 4vw;
-                    opacity: 1;
-                    
-                    &:hover{
-                        opacity: 0;
-                    }
-                }
-                i.fas{
-                    opacity: 0;
-                    position: absolute;
-                    top: 4vw;
-                    background: -webkit-linear-gradient(#FF79DA, #9356DC);
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                   
-                    &:hover{
-                        font-size: 8.5vw;
-                        transition: 600ms;
-                        opacity: 1;
-                        
-                    }
-                  }
-
-                 
-                
-            }
+           .heart{
+            @include heartbnt;
+           }
               
         }
     }
 /*-------------------------------------------FOOTER----------------------------------------*/
-        .end{
-            background-color: rgb(66, 66, 66);
-            padding-top: 0;
-            margin-top: 0;
-            padding-bottom: 20px;
-            a{
-                color: rgb(255, 255, 255);
-                text-decoration: none;
-            }
-        
-            h3{
-                margin: 0;
-                margin-left: 9vw;
-                
-            }
-           
-             li{
-                list-style: none;
-                margin: 5px;
-                color: white;
-                
-            }
-            i.fas{
-                color: white;
-                margin-right: 10px;
-            }
-        }
+    @import "./layout/footer";
 }
