Tentative resolution mixin

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -247,7 +247,7 @@ h1{
                 width: 70%;
             }
            .heart{
-            @include heartbnt;
+            @include heartbtn;
            }
               
         }
